# rust-kvs

./: .gitignore  .gitmodules  README.md  run_clients.sh
kvscoordinator/: Cargo.toml  example.txns  workload_gen.py
kvscoordinator/src/: main.rs  txn_parser.rs
kvsinterface/: Cargo.toml
kvsinterface/src/: lib.rs
kvsserver/: Cargo.toml  build.rs
kvsserver/src/: grpc.rs  kvs.rs  main.rs  storage.rs
