[package]
name = "kvscoordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
kvsinterface = {version = "0.1.0", path = "../kvsinterface"}
clap = { version = "4.4.18", features = ["derive"] }
tarpc = { version = "0.37.0", features = ["full"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.100"
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.12.2"
thiserror = "2.0.17"

