[package]
name = "kvsinterface"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.37", features = ["tokio1"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
